objects/CCMI__Work__c.object
<CustomObject>
    <fields>
        <fullName>CCMI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Administration__c</fullName>
        <label>Administration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Billable_Rate__c</fullName>
        <formula>CCMI__Hours__c * BLANKVALUE(CCMI__Milestone_Task__r.CCMI__Hourly_Rate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billable Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMI__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCMI__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__HHmm__c</fullName>
        <label>Hours</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Hours__c</fullName>
        <label>Hours (Number)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Task</label>
        <referenceTo>CCMI__Milestone_Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Parent__c</fullName>
        <label>Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Timesheet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>CCMI__Timesheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCMI__Time_Entries_Timesheet_Locked</fullName>
        <active>true</active>
        <description>When the status of the Timesheet is Submitted or Approved, the hours entered on a Time Entry can&apos;t be modified</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(CCMI__Hours__c)) &amp;&amp; (ISPICKVAL(CCMI__Timesheet__r.CCMI__Status__c, &apos;Submitted&apos;) || ISPICKVAL(CCMI__Timesheet__r.CCMI__Status__c, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Timesheet is locked. The Time Entry can not be modified.</errorMessage>
    </validationRules>
</CustomObject>